Source/WebKit2/UIProcess/qt/QtViewportInteractionEngine.h
@@ -110,7 +110,9 @@ private Q_SLOTS:
     // Respond to changes of content that are not driven by us, like the page resizing itself.
     void itemSizeChanged();
 
-    void scrollStateChanged();
+    void flickableMovingStateChanged();
+    void flickableMovingPositionUpdate();
+
     void scaleAnimationStateChanged(QAbstractAnimation::State, QAbstractAnimation::State);
     void scaleAnimationValueChanged(QVariant value) { setItemRectVisible(value.toRectF()); }
 
@@ -124,6 +126,9 @@ private:
 
     qreal innerBoundedCSSScale(qreal);
     qreal outerBoundedCSSScale(qreal);
+
+    void panMoveStarted(); // Called when panning starts.
+    void panMoveEnded(); //   Called when panning (+ kinetic animation) ends.
 
     QRectF computePosRangeForItemAtScale(qreal itemScale) const;
     bool ensureContentWithinViewportBoundary(bool immediate = false);
@@ -154,6 +159,7 @@ private:
 
     ScaleAnimation* m_scaleAnimation;
     QPointF m_lastPinchCenterInViewportCoordinates;
+    QPointF m_lastScrollPosition;
     qreal m_pinchStartScale;
 };
 
