Source/WebKit2/WebProcess/WebPage/LayerTreeHost.h
@@ -81,7 +81,7 @@ public:
 
 #if USE(TILED_BACKING_STORE)
     virtual void setVisibleContentRectAndScale(const WebCore::IntRect&, float scale) { }
-    virtual void setVisibleContentRectTrajectoryVector(const WebCore::FloatPoint&) { }
+    virtual void setVisibleContentRectTrajectoryVector(const WebCore::IntRect&, const WebCore::FloatPoint&) { }
     virtual void setVisibleContentRectForLayer(int layerID, const WebCore::IntRect&) { }
     virtual void renderNextFrame() { }
     virtual void purgeBackingStores() { }
